openmediavault (6.0.11-1) unstable; urgency=low

  * Various improvements.
  * Fix issue in SMB recycle cron job.
  * Disable the 'Access control list' button on the shared folder
    page if the selected entry is located on a non-POSIX compliant
    file system.
  * Issue #1204: Improve IPv6 validation in UI.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 05 Feb 2022 09:00:47 +0100

openmediavault (6.0.10-1) unstable; urgency=low

  * Update locale files.
  * Make sure SMB recycle bin is cleared immediately when the
    button is pressed in the UI.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 25 Jan 2022 23:29:54 +0100

openmediavault (6.0.9-5) unstable; urgency=low

  * Update locale files.
  * Use systemd watchdog instead of separate daemon.
  * Relocate the user management navigation menu.
  * Issue #1181: Use 'Warning' color for SMART assessment status
    'BAD_SECTOR'.
  * Issue #1189: Add environment variable OMV_NGINX_SITE_WEBGUI_LISTEN_PARAMS
    to be able to customize the nginx listen directive.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 12 Jan 2022 19:53:08 +0100

openmediavault (6.0.8-1) unstable; urgency=low

  * Various improvements.
  * Update locale files.
  * Add the ability to copy and apply the permissions of a shared
    folder to its ACL page.
  * Add 'Conflicts' section in package control; openmediavault
    can't be installed side-by-side with graphical environments
    anymore.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 12 Jan 2022 19:15:24 +0100

openmediavault (6.0.7-1) unstable; urgency=low

  * Update locale files.
  * Prevent the deactivation of SMART monitoring for devices
    that are connected to a scheduled job.
  * Replace the form input field 'Maximum file size' of the
    configuration of the recycle bin on the SMB shares page
    with a drop-down field for the sake of simplicity.
    Please check your settings because they are not migrated.