@@ -6,6 +6,7 @@ openmediavault (6.0.11-1) unstable; urgency=low
     page if the selected entry is located on a non-POSIX compliant
     file system.
   * Issue #1204: Improve IPv6 validation in UI.
+  * Issue #1205: Add 'Mount Options' column to file system page.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sat, 05 Feb 2022 09:00:47 +0100
 
